[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-review-assistant"
version = "1.0.0"
description = "OpenEnv environment for AI code review agent training"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.6.0",
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "openai==1.12.0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "gradio==4.44.1",
    "huggingface_hub==0.26.2",
    "httpx==0.27.2",
]

[project.entry-points."openenv.environments"]
code-review-assistant = "environment:CodeReviewEnv"

[tool.openenv]
name = "code-review-assistant"
version = "1.0.0"
environment_class = "environment:CodeReviewEnv"
